syntax = "proto3";
option java_multiple_files = true;
package ru.nms.diplom.ircrossfeature.service;

message CrossFeatureRequest {
    int32 queriesAmount = 1;
    int32 k = 2;
}

message CrossFeatureResponse {
    double faissMRR = 1;
    double bm25MRR = 2;
    double mrrWithRRF = 3;
    double mrrWithRSF = 4;
}

service CrossFeatureService {
    rpc calculateMRR(CrossFeatureRequest) returns (CrossFeatureResponse);
}